--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-watch": "^4.3.11",
     "jplayer": "^2.9.2",
     "jquery": "^3.1.1",
+    "wherewolf": "1.0.3",
     "normalize.css": "^5.0.0",
     "onscreen": "^1.2.0",
     "vinyl-source-stream": "^1.1.0"
