--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery": "^3.1.1",
     "normalize.css": "^5.0.0",
     "onscreen": "^1.2.0",
+    "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0",
     "wherewolf": "1.0.3"
   }
