--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "browserify-shim": "^3.8.12",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-clean-css": "^2.3.2",
+    "gulp-md5-plus": "^0.2.5",
     "gulp-sass": "^3.0.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-uglifycss": "^1.0.6",
     "gulp-watch": "^4.3.11",
     "jplayer": "^2.9.2",
     "jquery": "^3.1.1",
