--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "browser-sync": "^2.18.5",
     "browserify": "^13.1.1",
     "browserify-shim": "^3.8.12",
+    "clipboard": "^1.5.16",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-clean": "^0.3.2",
