--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "browserify": "^13.1.1",
     "browserify-shim": "^3.8.12",
     "clipboard": "^1.5.16",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-clean": "^0.3.2",
@@ -29,6 +30,7 @@
     "jquery": "^3.1.1",
     "normalize.css": "^5.0.0",
     "onscreen": "^1.2.0",
+    "run-sequence": "^1.2.2",
     "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0",
     "wherewolf": "1.0.3"
