--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.3.2",
-    "gulp-md5-plus": "^0.2.5",
+    "gulp-md5-plus": "Ravenstine/gulp-md5-plus",
     "gulp-sass": "^3.0.0",
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.11",
